--- a/frontend/pricing.html
+++ b/frontend/pricing.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EduConnect - Pricing</title>
+    <title>EduConnect - Bảng Giá</title>
     <link rel="stylesheet" href="css/pricing.css">
 
 </head>
 <body>
     <header>
         <div class="logo">
-            <img src="images\Educonnect_logo.png" alt="EduConnectGPT Logo">
+            <img src="images\Educonnect_logo.png" alt="Logo EduConnectGPT">
         </div>
         <nav>
             <ul>
-                <li><a href="/home" class="nav-item px-2 py-1 text-gray-700 hover:text-blue-900 animated-underline">Home</a></li>
-                <li><a href="/review" class="nav-item px-2 py-1 text-gray-700 hover:text-blue-900 animated-underline">Tutors</a></li>
-                <li><a href="/ranking" class="nav-item px-2 py-1 text-gray-700 hover:text-blue-900 animated-underline">Ranking</a></li>
-                <li><a href="/support" class="nav-item px-2 py-1 text-gray-700 hover:text-blue-900 animated-underline">Support</a></li>
+                <li><a href="/home" class="nav-item px-2 py-1 text-gray-700 hover:text-blue-900 animated-underline">Trang chủ</a></li>
+                <li><a href="/review" class="nav-item px-2 py-1 text-gray-700 hover:text-blue-900 animated-underline">Gia sư</a></li>
+                <li><a href="/ranking" class="nav-item px-2 py-1 text-gray-700 hover:text-blue-900 animated-underline">Xếp hạng</a></li>
+                <li><a href="/support" class="nav-item px-2 py-1 text-gray-700 hover:text-blue-900 animated-underline">Hỗ trợ</a></li>
                 <li><a href="/educonnectGPT" class="nav-item px-2 py-1 text-gray-700 hover:text-blue-900 animated-underline">EduconnectGPT</a></li>
-                <li><a href="/chat" class="nav-item px-2 py-1 text-gray-700 hover:text-blue-900 animated-underline">Chat</a></li>
-                <li><a href="/schedule" class="nav-item px-2 py-1 text-gray-700 hover:text-blue-900 animated-underline ">Schedule</a></li>
+                <li><a href="/chat" class="nav-item px-2 py-1 text-gray-700 hover:text-blue-900 animated-underline">Trò chuyện</a></li>
+                <li><a href="/schedule" class="nav-item px-2 py-1 text-gray-700 hover:text-blue-900 animated-underline ">Lịch trình</a></li>
             </ul>
         </nav>
         <div class="right-actions">
@@ -29,11 +29,11 @@
             <div class="account-container">
                 <div class="account-icon">👤</div>
                 <div class="account-dropdown">
-                    <a href="/profile" class="dropdown-item">Profile</a>
-                    <a href="/setting" class="dropdown-item">Setting</a>
-                    <a href="#" class="dropdown-item">Pricing</a>
+                    <a href="/profile" class="dropdown-item">Hồ sơ</a>
+                    <a href="/setting" class="dropdown-item">Cài đặt</a>
+                    <a href="#" class="dropdown-item">Bảng giá</a>
                     <div class="dropdown-divider"></div>
-                    <a href="/login" class="dropdown-item">Sign out</a>
+                    <a href="/login" class="dropdown-item">Đăng xuất</a>
                 </div>
             </div>
         </div>
@@ -41,79 +41,79 @@
 
     <section class="hero-section">
         <div class="hero-content">
-            <h1>We are EduConnect</h1>
-            <p>Connecting knowledge, stepping firmly into the future</p>
-            <a href="#pricing" class="hero-button">Enroll Now ➜</a>
+            <h1>Chúng tôi là EduConnect</h1>
+            <p>Kết nối tri thức, bước vững chắc vào tương lai</p>
+            <a href="#pricing" class="hero-button">Đăng ký ngay ➜</a>
         </div>
 
     </section>
 
     <section id="pricing" class="pricing-section">
         <div class="pricing-header">
-            <h2>Start now your free plan</h2>
+            <h2>Bắt đầu ngay với gói miễn phí</h2>
         </div>
         <div class="pricing-container">
             <!-- Lite Plan Card -->
             <div class="pricing-card">
                 <div class="pricing-card-header lite-card">
-                    <div class="plan-name">Lite</div>
-                    <div class="plan-price">Free</div>
-                    <div class="plan-subtitle">With restrictions</div>
+                    <div class="plan-name">Cơ bản</div>
+                    <div class="plan-price">Miễn phí</div>
+                    <div class="plan-subtitle">Có giới hạn</div>
                 </div>
                 <div class="pricing-card-body">
-                    <div class="plan-includes">Plan includes :</div>
+                    <div class="plan-includes">Gói bao gồm :</div>
                     <ul class="feature-list">
                         <li class="feature-item">
                             <span class="feature-icon">✓</span>
-                            <span>Standard recommendation and matching services</span>
+                            <span>Dịch vụ giới thiệu và kết nối tiêu chuẩn</span>
                         </li>
                         <li class="feature-item">
                             <span class="feature-icon">✓</span>
-                            <span>Basic course navigation</span>
+                            <span>Điều hướng khóa học cơ bản</span>
                         </li>
                         <li class="feature-item">
                             <span class="feature-icon">✓</span>
-                            <span>Integrated chatbot (30 messages/day)</span>
+                            <span>Trò chuyện tích hợp (30 tin nhắn/ngày)</span>
                         </li>
                         <li class="feature-item">
                             <span class="feature-icon">✓</span>
-                            <span>Community forum access</span>
+                            <span>Truy cập diễn đàn cộng đồng</span>
                         </li>
                     </ul>
-                    <a href="#" class="see-features">See details</a>
-                    <a href="#" class="choose-plan-btn">Choose the plan</a>
+                    <a href="#" class="see-features">Xem chi tiết</a>
+                    <a href="#" class="choose-plan-btn">Chọn gói</a>
                 </div>
             </div>
 
             <!-- Gold Plan Card -->
             <div class="pricing-card">
                 <div class="pricing-card-header gold-card">
-                    <div class="plan-name">Gold</div>
-                    <div class="plan-price">69k/month</div>
-                    <div class="plan-subtitle">Unlimited</div>
+                    <div class="plan-name">Vàng</div>
+                    <div class="plan-price">69k/tháng</div>
+                    <div class="plan-subtitle">Không giới hạn</div>
                 </div>
                 <div class="pricing-card-body">
-                    <div class="plan-includes">Plan includes :</div>
+                    <div class="plan-includes">Gói bao gồm :</div>
                     <ul class="feature-list">
                         <li class="feature-item">
                             <span class="feature-icon">✓</span>
-                            <span>Personalized AI Assistant</span>
+                            <span>Trợ lý AI cá nhân hóa</span>
                         </li>
                         <li class="feature-item">
                             <span class="feature-icon">✓</span>
-                            <span>Lecture summarization (AI Assistant)</span>
+                            <span>Tóm tắt bài giảng (Trợ lý AI)</span>
                         </li>
                         <li class="feature-item">
                             <span class="feature-icon">✓</span>
-                            <span>Test generation with AI</span>
+                            <span>Tạo bài kiểm tra bằng AI</span>
                         </li>
                         <li class="feature-item">
                             <span class="feature-icon">✓</span>
-                            <span>Integrated chatbot (unlimited)</span>
+                            <span>Trò chuyện tích hợp (không giới hạn)</span>
                         </li>
                     </ul>
-                    <a href="#" class="see-features">See all features</a>
-                    <a href="#" class="choose-plan-btn">Choose the plan</a>
+                    <a href="#" class="see-features">Xem tất cả tính năng</a>
+                    <a href="#" class="choose-plan-btn">Chọn gói</a>
                 </div>
             </div>
         </div>
@@ -121,25 +121,25 @@
 
     <footer>
         <div class="footer-logo">
-            <img src="/api/placeholder/80/80" alt="EduConnect Logo">
+            <img src="/api/placeholder/80/80" alt="Logo EduConnect">
             <div class="footer-tagline">
-                EduConnect - Connecting knowledge,<br>
-                stepping firmly into the future.<br>
-                —EduConnect team
+                EduConnect - Kết nối tri thức,<br>
+                bước vững chắc vào tương lai.<br>
+                —Đội ngũ EduConnect
             </div>
         </div>
         <div class="footer-links">
-            <a href="#">All pages</a>
-            <a href="#">All Courses</a>
-            <a href="#">Contact</a>
-            <a href="#">Privacy Policy</a>
-            <a href="#">Refund and Returns Policy</a>
-            <a href="#">About Us</a>
-            <a href="#">FAQ</a>
-            <a href="#">Terms and Condition</a>
+            <a href="#">Tất cả trang</a>
+            <a href="#">Tất cả khóa học</a>
+            <a href="#">Liên hệ</a>
+            <a href="#">Chính sách riêng tư</a>
+            <a href="#">Chính sách hoàn tiền và trả hàng</a>
+            <a href="#">Về chúng tôi</a>
+            <a href="#">Câu hỏi thường gặp</a>
+            <a href="#">Điều khoản và điều kiện</a>
         </div>
         <div class="footer-socials"> 
-            <h3>Follow Us</h3> 
+            <h3>Theo dõi chúng tôi</h3> 
             <div class="social-icons-list"> 
                 <a href="YOUR_YOUTUBE_LINK" target="_blank" class="social-icon-item" title="YouTube">
                     <img src="images/Youtube.jpg" alt="YouTube"> 
