--- a/frontend/ranking.html
+++ b/frontend/ranking.html
@@ -1,39 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EduConnect - Global Rankings</title>
+    <title>EduConnect - Bảng Xếp Hạng Toàn Cầu</title>
     <link rel="stylesheet" href="css/ranking.css">
 
 </head>
 <body>
     <header>
         <div class="logo">
-            <img src="images/Educonnect_logo.png" alt="EduConnectGPT Logo">
+            <img src="images/Educonnect_logo.png" alt="Logo EduConnectGPT">
         </div>
         <nav>
             <ul>
-                <li><a href="/home" class="nav-item px-2 py-1 text-gray-700 hover:text-blue-900 animated-underline">Home</a></li>
-                <li><a href="/review" class="nav-item px-2 py-1 text-gray-700 hover:text-blue-900 animated-underline">Tutors</a></li>
-                <li><a href="#" class="active">Ranking</a></li>
-                <li><a href="/support" class="nav-item px-2 py-1 text-gray-700 hover:text-blue-900 animated-underline">Support</a></li>
+                <li><a href="/home" class="nav-item px-2 py-1 text-gray-700 hover:text-blue-900 animated-underline">Trang chủ</a></li>
+                <li><a href="/review" class="nav-item px-2 py-1 text-gray-700 hover:text-blue-900 animated-underline">Gia sư</a></li>
+                <li><a href="#" class="active">Xếp hạng</a></li>
+                <li><a href="/support" class="nav-item px-2 py-1 text-gray-700 hover:text-blue-900 animated-underline">Hỗ trợ</a></li>
                 <li><a href="/educonnectGPT" class="nav-item px-2 py-1 text-gray-700 hover:text-blue-900 animated-underline">EduconnectGPT</a></li>
-                <li><a href="/chat" class="nav-item px-2 py-1 text-gray-700 hover:text-blue-900 animated-underline">Chat</a></li>
-                <li><a href="/schedule" class="nav-item px-2 py-1 text-gray-700 hover:text-blue-900 animated-underline ">Schedule</a></li>
+                <li><a href="/chat" class="nav-item px-2 py-1 text-gray-700 hover:text-blue-900 animated-underline">Trò chuyện</a></li>
+                <li><a href="/schedule" class="nav-item px-2 py-1 text-gray-700 hover:text-blue-900 animated-underline ">Lịch học</a></li>
             </ul>
         </nav>
         <div class="right-actions">
-            <div class="credit-icon">0.0 $</div>
+            <div class="credit-icon">0.0 đ</div>
             <a href="/notification" class="notification-icon" style="text-decoration: none;">🔔</a>
             <div class="account-container">
                 <div class="account-icon">👤</div>
                 <div class="account-dropdown">
-                    <a href="/profile" class="dropdown-item">Profile</a>
-                    <a href="/setting" class="dropdown-item">Setting</a>
-                    <a href="/pricing" class="dropdown-item">Pricing</a>
+                    <a href="/profile" class="dropdown-item">Hồ sơ</a>
+                    <a href="/setting" class="dropdown-item">Cài đặt</a>
+                    <a href="/pricing" class="dropdown-item">Bảng giá</a>
                     <div class="dropdown-divider"></div>
-                    <a href="/login" class="dropdown-item">Sign out</a>
+                    <a href="/login" class="dropdown-item">Đăng xuất</a>
                 </div>
             </div>
         </div>
@@ -41,15 +41,15 @@
 
     <section class="hero">
         <div class="hero-content">
-            <h1>Challenge each other, push your limits, and grow together—iron sharpens iron.</h1>
+            <h1>Thách thức lẫn nhau, vượt qua giới hạn, và cùng nhau phát triển — sắt mài sắt.</h1>
         </div>
     </section>
 
     <div class="main-content">
         <div class="ranking-tabs">
-            <div class="tab active">User Profile</div>
-            <div class="tab">Global Ranks</div>
-            <div class="tab">Earned Point</div>
+            <div class="tab active">Hồ sơ người dùng</div>
+            <div class="tab">Xếp hạng toàn cầu</div>
+            <div class="tab">Điểm đạt được</div>
         </div>
 
         <table class="ranking-table">
@@ -57,11 +57,11 @@
                 <td>
                     <div class="user-info">
                         <div class="user-avatar">
-                            <img src="images\Lê Nguyễn Thanh Bình.jpg" alt="User Avatar">
+                            <img src="images\Lê Nguyễn Thanh Bình.jpg" alt="Ảnh đại diện người dùng">
                         </div>
                         <div>
                             <span class="user-name">Bình</span>
-                            <span class="user-contacts">124 contacts</span>
+                            <span class="user-contacts">124 liên hệ</span>
                         </div>
                     </div>
                 </td>
@@ -72,11 +72,11 @@
                 <td>
                     <div class="user-info">
                         <div class="user-avatar">
-                            <img src="images\ảnh ranking 2.jpg" alt="User Avatar">
+                            <img src="images\ảnh ranking 2.jpg" alt="Ảnh đại diện người dùng">
                         </div>
                         <div>
                             <span class="user-name">Châu</span>
-                            <span class="user-contacts">124 contacts</span>
+                            <span class="user-contacts">124 liên hệ</span>
                         </div>
                     </div>
                 </td>
@@ -87,11 +87,11 @@
                 <td>
                     <div class="user-info">
                         <div class="user-avatar">
-                            <img src="images\ảnh ranking 3.jpg" alt="User Avatar">
+                            <img src="images\ảnh ranking 3.jpg" alt="Ảnh đại diện người dùng">
                         </div>
                         <div>
                             <span class="user-name">Mạnh</span>
-                            <span class="user-contacts">124 contacts</span>
+                            <span class="user-contacts">124 liên hệ</span>
                         </div>
                     </div>
                 </td>
@@ -102,11 +102,11 @@
                 <td>
                     <div class="user-info">
                         <div class="user-avatar">
-                            <img src="images\ảnh ranking 4.jpg" alt="User Avatar">
+                            <img src="images\ảnh ranking 4.jpg" alt="Ảnh đại diện người dùng">
                         </div>
                         <div>
                             <span class="user-name">Hiếu</span>
-                            <span class="user-contacts">124 contacts</span>
+                            <span class="user-contacts">124 liên hệ</span>
                         </div>
                     </div>
                 </td>
@@ -117,11 +117,11 @@
                 <td>
                     <div class="user-info">
                         <div class="user-avatar">
-                            <img src="images\ảnh ranking 2.jpg" alt="User Avatar">
+                            <img src="images\ảnh ranking 2.jpg" alt="Ảnh đại diện người dùng">
                         </div>
                         <div>
                             <span class="user-name">Chi</span>
-                            <span class="user-contacts">124 contacts</span>
+                            <span class="user-contacts">124 liên hệ</span>
                         </div>
                     </div>
                 </td>
@@ -132,11 +132,11 @@
                 <td>
                     <div class="user-info">
                         <div class="user-avatar">
-                            <img src="images\ảnh ranking 3.jpg" alt="User Avatar">
+                            <img src="images\ảnh ranking 3.jpg" alt="Ảnh đại diện người dùng">
                         </div>
                         <div>
                             <span class="user-name">Dung</span>
-                            <span class="user-contacts">124 contacts</span>
+                            <span class="user-contacts">124 liên hệ</span>
                         </div>
                     </div>
                 </td>
@@ -147,11 +147,11 @@
                 <td>
                     <div class="user-info">
                         <div class="user-avatar">
-                            <img src="images\Lê Nguyễn Thanh Bình.jpg" alt="User Avatar">
+                            <img src="images\Lê Nguyễn Thanh Bình.jpg" alt="Ảnh đại diện người dùng">
                         </div>
                         <div>
                             <span class="user-name">Bình</span>
-                            <span class="user-contacts">124 contacts</span>
+                            <span class="user-contacts">124 liên hệ</span>
                         </div>
                     </div>
                 </td>
@@ -162,11 +162,11 @@
                 <td>
                     <div class="user-info">
                         <div class="user-avatar">
-                            <img src="images\ảnh ranking 4.jpg" alt="User Avatar">
+                            <img src="images\ảnh ranking 4.jpg" alt="Ảnh đại diện người dùng">
                         </div>
                         <div>
                             <span class="user-name">Bình</span>
-                            <span class="user-contacts">124 contacts</span>
+                            <span class="user-contacts">124 liên hệ</span>
                         </div>
                     </div>
                 </td>
@@ -187,25 +187,25 @@
 
     <footer>
         <div class="footer-logo">
-            <img src="images/Educonnect_logo.png" alt="EduConnect Logo">
+            <img src="images/Educonnect_logo.png" alt="Logo EduConnect">
             <div class="footer-tagline">
-                EduConnect - Connecting knowledge,<br>
-                stepping firmly into the future.<br>
-                —EduConnect team
+                EduConnect - Kết nối tri thức,<br>
+                bước vững chắc vào tương lai.<br>
+                —Đội ngũ EduConnect
             </div>
         </div>
         <div class="footer-links">
-            <a href="#">All pages</a>
-            <a href="#">All Courses</a>
-            <a href="#">Contact</a>
-            <a href="#">Privacy Policy</a>
-            <a href="#">Refund and Returns Policy</a>
-            <a href="#">About Us</a>
-            <a href="#">FAQ</a>
-            <a href="#">Terms and Condition</a>
+            <a href="#">Tất cả trang</a>
+            <a href="#">Tất cả khóa học</a>
+            <a href="#">Liên hệ</a>
+            <a href="#">Chính sách bảo mật</a>
+            <a href="#">Chính sách hoàn tiền và trả hàng</a>
+            <a href="#">Về chúng tôi</a>
+            <a href="#">Câu hỏi thường gặp</a>
+            <a href="#">Điều khoản và điều kiện</a>
         </div>
         <div class="footer-socials"> 
-            <h3>Follow Us</h3> 
+            <h3>Theo dõi chúng tôi</h3> 
             <div class="social-icons-list"> 
                 <a href="YOUR_YOUTUBE_LINK" target="_blank" class="social-icon-item" title="YouTube">
                     <img src="images/Youtube.jpg" alt="YouTube"> 
