--- a/frontend/review.html
+++ b/frontend/review.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EduConnect - Spreading Knowledge</title>
+    <title>EduConnect - Lan Tỏa Kiến Thức</title>
     <link rel="stylesheet" href="css/review.css">
 </head>
 <body>
     <header>
         <div class="logo">
-            <img src="images/Educonnect_logo.png" alt="EduConnectGPT Logo">
+            <img src="images/Educonnect_logo.png" alt="Logo EduConnectGPT">
         </div>
         <nav>
             <ul>
-                <li><a href="/home" class="nav-item px-2 py-1 text-gray-700 hover:text-blue-900 animated-underline">Home</a></li>
-                <li><a href="#" class="active">Tutors</a></li>
-                <li><a href="/ranking" class="nav-item px-2 py-1 text-gray-700 hover:text-blue-900 animated-underline">Ranking</a></li>
-                <li><a href="/support" class="nav-item px-2 py-1 text-gray-700 hover:text-blue-900 animated-underline">Support</a></li>
+                <li><a href="/home" class="nav-item px-2 py-1 text-gray-700 hover:text-blue-900 animated-underline">Trang chủ</a></li>
+                <li><a href="#" class="active">Gia sư</a></li>
+                <li><a href="/ranking" class="nav-item px-2 py-1 text-gray-700 hover:text-blue-900 animated-underline">Xếp hạng</a></li>
+                <li><a href="/support" class="nav-item px-2 py-1 text-gray-700 hover:text-blue-900 animated-underline">Hỗ trợ</a></li>
                 <li><a href="/educonnectGPT" class="nav-item px-2 py-1 text-gray-700 hover:text-blue-900 animated-underline">EduconnectGPT</a></li>
-                <li><a href="/chat" class="nav-item px-2 py-1 text-gray-700 hover:text-blue-900 animated-underline">Chat</a></li>
-                <li><a href="/schedule" class="nav-item px-2 py-1 text-gray-700 hover:text-blue-900 animated-underline ">Schedule</a></li>
+                <li><a href="/chat" class="nav-item px-2 py-1 text-gray-700 hover:text-blue-900 animated-underline">Trò chuyện</a></li>
+                <li><a href="/schedule" class="nav-item px-2 py-1 text-gray-700 hover:text-blue-900 animated-underline ">Lịch học</a></li>
             </ul>
         </nav>
         <div class="right-actions">
@@ -28,11 +28,11 @@
             <div class="account-container">
                 <div class="account-icon">👤</div>
                 <div class="account-dropdown">
-                    <a href="/profile" class="dropdown-item">Profile</a>
-                    <a href="/setting" class="dropdown-item">Setting</a>
-                    <a href="/pricing" class="dropdown-item">Pricing</a>
+                    <a href="/profile" class="dropdown-item">Hồ sơ</a>
+                    <a href="/setting" class="dropdown-item">Cài đặt</a>
+                    <a href="/pricing" class="dropdown-item">Bảng giá</a>
                     <div class="dropdown-divider"></div>
-                    <a href="/login" class="dropdown-item">Sign out</a>
+                    <a href="/login" class="dropdown-item">Đăng xuất</a>
                 </div>
             </div>
         </div>
@@ -40,12 +40,12 @@
 
     <section class="hero">
         <div class="hero-content">
-            <h1>Spreading knowledge – Creating a sustainable future with EduConnect.</h1>
+            <h1>Lan tỏa kiến thức – Tạo dựng tương lai bền vững cùng EduConnect.</h1>
         </div>
     </section>
 
     <section>
-        <h2>Top Tutor</h2>
+        <h2>Gia Sư Hàng Đầu</h2>
         <div class="tutor-grid">
             <div class="tutor-card">
                 <div class="tutor-image">
@@ -53,7 +53,7 @@
                 </div>
                 <div class="tutor-info">
                     <div class="tutor-name">Lê Nguyễn Thanh Bình</div>
-                    <a href="#" class="see-more-btn">See more</a>
+                    <a href="#" class="see-more-btn">Xem thêm</a>
                 </div>
             </div>
             <div class="tutor-card">
@@ -62,7 +62,7 @@
                 </div>
                 <div class="tutor-info">
                     <div class="tutor-name">Nguyễn Hoàng Ngân</div>
-                    <a href="#" class="see-more-btn">See more</a>
+                    <a href="#" class="see-more-btn">Xem thêm</a>
                 </div>
             </div>
             <div class="tutor-card">
@@ -71,7 +71,7 @@
                 </div>
                 <div class="tutor-info">
                     <div class="tutor-name">Đặng Thanh Thủy</div>
-                    <a href="#" class="see-more-btn">See more</a>
+                    <a href="#" class="see-more-btn">Xem thêm</a>
                 </div>
             </div>
             <div class="tutor-card">
@@ -80,14 +80,14 @@
                 </div>
                 <div class="tutor-info">
                     <div class="tutor-name">Nguyễn Thủy Hiền</div>
-                    <a href="#" class="see-more-btn">See more</a>
+                    <a href="#" class="see-more-btn">Xem thêm</a>
                 </div>
             </div>
         </div>
     </section>
 
     <section>
-        <h2>Creative & Passion</h2>
+        <h2>Sáng Tạo & Đam Mê</h2>
         <div class="tutor-grid">
             <div class="tutor-card">
                 <div class="tutor-image">
@@ -95,7 +95,7 @@
                 </div>
                 <div class="tutor-info">
                     <div class="tutor-name">Đặng Trần Long</div>
-                    <a href="#" class="see-more-btn">See more</a>
+                    <a href="#" class="see-more-btn">Xem thêm</a>
                 </div>
             </div>
             <div class="tutor-card">
@@ -104,7 +104,7 @@
                 </div>
                 <div class="tutor-info">
                     <div class="tutor-name">Dương Hoàng Yến</div>
-                    <a href="#" class="see-more-btn">See more</a>
+                    <a href="#" class="see-more-btn">Xem thêm</a>
                 </div>
             </div>
             <div class="tutor-card">
@@ -113,7 +113,7 @@
                 </div>
                 <div class="tutor-info">
                     <div class="tutor-name">Vũ Tuyết Minh</div>
-                    <a href="#" class="see-more-btn">See more</a>
+                    <a href="#" class="see-more-btn">Xem thêm</a>
                 </div>
             </div>
             <div class="tutor-card">
@@ -122,14 +122,14 @@
                 </div>
                 <div class="tutor-info">
                     <div class="tutor-name">Phạm Anh Dương</div>
-                    <a href="#" class="see-more-btn">See more</a>
+                    <a href="#" class="see-more-btn">Xem thêm</a>
                 </div>
             </div>
         </div>
     </section>
 
     <section>
-        <h2>Free Courses</h2>
+        <h2>Khóa Học Miễn Phí</h2>
         <div class="tutor-grid">
             <div class="tutor-card">
                 <div class="tutor-image">
@@ -137,7 +137,7 @@
                 </div>
                 <div class="tutor-info">
                     <div class="tutor-name">Nguyễn Phương Thảo</div>
-                    <a href="#" class="see-more-btn">See more</a>
+                    <a href="#" class="see-more-btn">Xem thêm</a>
                 </div>
             </div>
             <div class="tutor-card">
@@ -146,7 +146,7 @@
                 </div>
                 <div class="tutor-info">
                     <div class="tutor-name">Minh Thu</div>
-                    <a href="#" class="see-more-btn">See more</a>
+                    <a href="#" class="see-more-btn">Xem thêm</a>
                 </div>
             </div>
             <div class="tutor-card">
@@ -155,7 +155,7 @@
                 </div>
                 <div class="tutor-info">
                     <div class="tutor-name">Đặng Nhung</div>
-                    <a href="#" class="see-more-btn">See more</a>
+                    <a href="#" class="see-more-btn">Xem thêm</a>
                 </div>
             </div>
             <div class="tutor-card">
@@ -164,38 +164,38 @@
                 </div>
                 <div class="tutor-info">
                     <div class="tutor-name">Minh Thu</div>
-                    <a href="#" class="see-more-btn">See more</a>
+                    <a href="#" class="see-more-btn">Xem thêm</a>
                 </div>
             </div>
         </div>
         <div class="tutor-description">
-            These are our highest-rated tutors with extensive experience and exceptional teaching skills. Each tutor has completed over 500 hours of teaching, ensuring high-quality and effective learning for students.
+            Đây là những gia sư được đánh giá cao nhất của chúng tôi với kinh nghiệm phong phú và kỹ năng giảng dạy xuất sắc. Mỗi gia sư đã hoàn thành hơn 500 giờ giảng dạy, đảm bảo việc học hiệu quả và chất lượng cao cho học viên.
         </div>
     </section>
 
     <footer>
         <div class="footer-logo">
-            <img src="images/Educonnect_logo.png" alt="EduConnect Logo">
+            <img src="images/Educonnect_logo.png" alt="Logo EduConnect">
             <div class="footer-tagline">
-                educonnect - Connecting knowledge, bringing learning into the future.<br>
-                - EduConnect Team
+                educonnect - Kết nối kiến thức, đưa việc học vào tương lai.<br>
+                - Đội ngũ EduConnect
             </div>
         </div>
         <div class="footer-links">
             <div>
-                <h3>All pages</h3>
+                <h3>Tất cả trang</h3>
                 <ul>
-                    <li><a href="#">All Courses</a></li>
-                    <li><a href="#">Account Billing</a></li>
-                    <li><a href="#">Privacy Policy</a></li>
-                    <li><a href="#">Refund and Cancellation Policy</a></li>
-                    <li><a href="#">FAQ</a></li>
-                    <li><a href="#">Terms and Conditions</a></li>
+                    <li><a href="#">Tất cả khóa học</a></li>
+                    <li><a href="#">Thanh toán tài khoản</a></li>
+                    <li><a href="#">Chính sách bảo mật</a></li>
+                    <li><a href="#">Chính sách hoàn tiền và hủy</a></li>
+                    <li><a href="#">Câu hỏi thường gặp</a></li>
+                    <li><a href="#">Điều khoản và điều kiện</a></li>
                 </ul>
             </div>
         </div>
         <div class="footer-socials"> 
-            <h3>Follow Us</h3> 
+            <h3>Theo dõi chúng tôi</h3> 
             <div class="social-icons-list"> 
                 <a href="YOUR_YOUTUBE_LINK" target="_blank" class="social-icon-item" title="YouTube">
                     <img src="images/Youtube.jpg" alt="YouTube"> 
