--- a/frontend/schedule.html
+++ b/frontend/schedule.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EduConnect - Schedule</title>
+    <title>EduConnect - Lịch Học</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/schedule.css">
 </head>
@@ -11,30 +11,30 @@
     <header>
         <div class="logo">
             <!-- Ensure you have this image or replace the path -->
-            <img src="images/Educonnect_logo.png" alt="EduConnect Logo">
+            <img src="images/Educonnect_logo.png" alt="Logo EduConnect">
         </div>
         <nav>
             <ul>
-                 <li><a href="/home" class="nav-item animated-underline">Home</a></li>
-                 <li><a href="/review" class="nav-item animated-underline">Tutors</a></li>
-                 <li><a href="/ranking" class="nav-item animated-underline">Ranking</a></li>
-                 <li><a href="/support" class="nav-item animated-underline">Support</a></li>
+                 <li><a href="/home" class="nav-item animated-underline">Trang chủ</a></li>
+                 <li><a href="/review" class="nav-item animated-underline">Gia sư</a></li>
+                 <li><a href="/ranking" class="nav-item animated-underline">Xếp hạng</a></li>
+                 <li><a href="/support" class="nav-item animated-underline">Hỗ trợ</a></li>
                  <li><a href="/educonnectGPT" class="nav-item animated-underline">EduconnectGPT</a></li>
-                 <li><a href="/chat" class="nav-item animated-underline">Chat</a></li>
-                 <li><a href="#" class="active">Schedule</a></li>
+                 <li><a href="/chat" class="nav-item animated-underline">Trò chuyện</a></li>
+                 <li><a href="#" class="active">Lịch học</a></li>
             </ul>
         </nav>
         <div class="right-actions">
-            <div class="credit-icon">0.0 $</div>
+            <div class="credit-icon">0.0 đ</div>
             <a href="/notification" class="notification-icon" style="text-decoration: none;">🔔</a>
             <div class="account-container">
                 <div class="account-icon">👤</div>
                 <div class="account-dropdown">
-                    <a href="/profile" class="dropdown-item">Profile</a>
-                    <a href="/setting" class="dropdown-item">Setting</a>
-                    <a href="/pricing" class="dropdown-item">Pricing</a>
+                    <a href="/profile" class="dropdown-item">Hồ sơ</a>
+                    <a href="/setting" class="dropdown-item">Cài đặt</a>
+                    <a href="/pricing" class="dropdown-item">Gói cước</a>
                     <div class="dropdown-divider"></div>
-                    <a href="/login" class="dropdown-item">Sign out</a>
+                    <a href="/login" class="dropdown-item">Đăng xuất</a>
                 </div>
             </div>
         </div>
@@ -55,15 +55,15 @@
             </div>
 
             <div class="calendar-container">
-                <div class="calendar-header">JULY 2025</div>
+                <div class="calendar-header">THÁNG 7 NĂM 2025</div>
                 <div class="calendar-weekdays">
-                    <span>M</span>
-                    <span>T</span>
-                    <span>W</span>
-                    <span>T</span>
-                    <span>F</span>
-                    <span>S</span>
-                    <span>S</span>
+                    <span>T2</span>
+                    <span>T3</span>
+                    <span>T4</span>
+                    <span>T5</span>
+                    <span>T6</span>
+                    <span>T7</span>
+                    <span>CN</span>
                 </div>
                 <div class="calendar-grid">
                     <!-- Week 1 -->
@@ -110,12 +110,12 @@
                     <!-- Schedule Events -->
                     <!-- <div id="event-thao-math" class="calendar-event event-blue">
                         <i class="fas fa-calculator"></i>
-                        Math with Nguyễn Thị Thảo
+                        Toán với Nguyễn Thị Thảo
                         <span class="event-time">13:00 - 15:30</span>
                     </div>
                     <div id="event-thao-english" class="calendar-event event-green">
                         <i class="fas fa-book"></i>
-                        Math with Nguyễn Thị Thảo
+                        Toán với Nguyễn Thị Thảo
                         <span class="event-time">13:00 - 15:30</span>
                     </div> -->
                 </div> <!-- End calendar-grid -->
@@ -127,27 +127,27 @@
     <footer>
         <div class="footer-logo">
              <!-- Ensure you have this image or replace the path -->
-             <img src="images/Educonnect_logo.png" alt="EduConnect Logo">
+             <img src="images/Educonnect_logo.png" alt="Logo EduConnect">
              <div class="footer-tagline">
-                 educonnect - Connecting knowledge, bringing learning into the future.<br>
-                 - EduConnect Team
+                 educonnect - Kết nối kiến thức, đưa việc học tập vào tương lai.<br>
+                 - Đội ngũ EduConnect
              </div>
         </div>
         <div class="footer-links">
              <div>
-                 <h3>All pages</h3>
+                 <h3>Tất cả trang</h3>
                  <ul>
-                     <li><a href="#">All Courses</a></li>
-                     <li><a href="#">Account Billing</a></li>
-                     <li><a href="#">Privacy Policy</a></li>
-                     <li><a href="#">Refund and Cancellation Policy</a></li>
-                     <li><a href="#">FAQ</a></li>
-                     <li><a href="#">Terms and Conditions</a></li>
+                     <li><a href="#">Tất cả khóa học</a></li>
+                     <li><a href="#">Thanh toán tài khoản</a></li>
+                     <li><a href="#">Chính sách bảo mật</a></li>
+                     <li><a href="#">Chính sách hoàn tiền và hủy bỏ</a></li>
+                     <li><a href="#">Câu hỏi thường gặp</a></li>
+                     <li><a href="#">Điều khoản và điều kiện</a></li>
                  </ul>
              </div>
         </div>
         <div class="footer-socials">
-            <h3>Follow Us</h3>
+            <h3>Theo dõi chúng tôi</h3>
             <div class="social-icons-list">
                 <!-- Replace YOUR_..._LINK with actual URLs -->
                 <!-- Ensure you have these images or replace paths -->
