--- a/frontend/match.html
+++ b/frontend/match.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EduConnect - Matching Tutor</title>
+    <title>EduConnect - Ghép Đôi Gia Sư</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/match.css">
 
 </head>
 <body>
-    <!-- Header (No changes) -->
+    <!-- Tiêu đề (Không thay đổi) -->
     <header>
         <div class="logo">
-            <img src="images/Educonnect_logo.png" alt="EduConnectGPT Logo">
+            <img src="images/Educonnect_logo.png" alt="Logo EduConnectGPT">
         </div>
         <nav>
             <ul>
-                 <li><a href="/home" class="nav-item px-2 py-1 text-gray-700 hover:text-blue-900 animated-underline active">Home</a></li>
-                 <li><a href="/review" class="nav-item px-2 py-1 text-gray-700 hover:text-blue-900 animated-underline">Review</a></li>
-                 <li><a href="/ranking" class="nav-item px-2 py-1 text-gray-700 hover:text-blue-900 animated-underline">Ranking</a></li>
-                 <li><a href="/support" class="nav-item px-2 py-1 text-gray-700 hover:text-blue-900 animated-underline">Support</a></li>
+                 <li><a href="/home" class="nav-item px-2 py-1 text-gray-700 hover:text-blue-900 animated-underline active">Trang Chủ</a></li>
+                 <li><a href="/review" class="nav-item px-2 py-1 text-gray-700 hover:text-blue-900 animated-underline">Gia Sư</a></li>
+                 <li><a href="/ranking" class="nav-item px-2 py-1 text-gray-700 hover:text-blue-900 animated-underline">Xếp Hạng</a></li>
+                 <li><a href="/support" class="nav-item px-2 py-1 text-gray-700 hover:text-blue-900 animated-underline">Hỗ trợ</a></li>
                  <li><a href="/educonnectGPT" class="nav-item px-2 py-1 text-gray-700 hover:text-blue-900 animated-underline">EduconnectGPT</a></li>
                  <li><a href="/chat" class="nav-item px-2 py-1 text-gray-700 hover:text-blue-900 animated-underline">Chat</a></li>
-                 <li><a href="/schedule" class="nav-item px-2 py-1 text-gray-700 hover:text-blue-900 animated-underline">Schedule</a></li>
+                 <li><a href="/schedule" class="nav-item px-2 py-1 text-gray-700 hover:text-blue-900 animated-underline">Lịch</a></li>
             </ul>
         </nav>
         <div class="right-actions">
@@ -31,74 +31,74 @@
             <div class="account-container">
                 <div class="account-icon">👤</div>
                 <div class="account-dropdown">
-                    <a href="/profile" class="dropdown-item">Profile</a>
-                    <a href="/setting" class="dropdown-item">Setting</a>
-                    <a href="/pricing" class="dropdown-item">Pricing</a>
+                    <a href="/profile" class="dropdown-item">Hồ Sơ</a>
+                    <a href="/setting" class="dropdown-item">Cài Đặt</a>
+                    <a href="/pricing" class="dropdown-item">Bảng Giá</a>
                     <div class="dropdown-divider"></div>
-                    <a href="/login" class="dropdown-item">Sign out</a>
+                    <a href="/login" class="dropdown-item">Đăng Xuất</a>
                 </div>
             </div>
         </div>
     </header>
 
-    <!-- Main Content Area -->
+    <!-- Khu vực nội dung chính -->
     <main>
         <div class="match-container" id="matchContainer">
             <div class="final-status-box" id="finalStatusBox">
-                <!-- Text will be set by JavaScript -->
+                <!-- Văn bản sẽ được thiết lập bởi JavaScript -->
             </div>
 
-            <!-- Loading Spinner -->
+            <!-- Biểu tượng đang tải -->
             <div class="loading-spinner" id="loadingSpinner">
                 <i class="fas fa-spinner"></i>
             </div>
 
-            <!-- Tutor Area -->
+            <!-- Khu vực Gia sư -->
             <div class="tutor-area" id="tutorArea">
-                <!-- Student Card -->
+                <!-- Thẻ học sinh -->
                 <div class="tutor-card" id="tutor1">
-                    <div class="tutor-label">Student</div>
+                    <div class="tutor-label">Học Sinh</div>
                     <div class="tutor-image">
-                        <img src="images\images\4.png" alt="user">
+                        <img src="images\images\4.png" alt="người dùng">
                     </div>
                     <div class="tutor-info">
-                        <h3 class="tutor-name">users</h3>
+                        <h3 class="tutor-name">người dùng</h3>
                         <div class="tutor-buttons">
-                            <a href="#" class="tutor-seemore-btn">See more</a>
-                            <!-- Note: Student card doesn't have a message button or details area -->
+                            <a href="#" class="tutor-seemore-btn">Xem thêm</a>
+                            <!-- Lưu ý: Thẻ học sinh không có nút nhắn tin hoặc khu vực chi tiết -->
                         </div>
                     </div>
                 </div>
-                <!-- Teacher cards will be added here by JavaScript -->
+                <!-- Thẻ giáo viên sẽ được thêm vào đây bởi JavaScript -->
 
             </div>
         </div>
     </main>
 
-    <!-- Footer (No changes) -->
+    <!-- Chân trang (Không thay đổi) -->
     <footer>
         <div class="footer-logo">
-             <img src="images/Educonnect_logo.png" alt="EduConnect Logo">
+             <img src="images/Educonnect_logo.png" alt="Logo EduConnect">
              <div class="footer-tagline">
-                 educonnect - Connecting knowledge, bringing learning into the future.<br>
-                 - EduConnect Team
+                 educonnect - Kết nối kiến thức, đưa việc học vào tương lai.<br>
+                 - Đội ngũ EduConnect
              </div>
         </div>
         <div class="footer-links">
              <div>
-                 <h3>All pages</h3>
+                 <h3>Tất cả trang</h3>
                  <ul>
-                     <li><a href="#">All Courses</a></li>
-                     <li><a href="#">Account Billing</a></li>
-                     <li><a href="#">Privacy Policy</a></li>
-                     <li><a href="#">Refund and Cancellation Policy</a></li>
-                     <li><a href="#">FAQ</a></li>
-                     <li><a href="#">Terms and Conditions</a></li>
+                     <li><a href="#">Tất cả khóa học</a></li>
+                     <li><a href="#">Thanh toán tài khoản</a></li>
+                     <li><a href="#">Chính sách bảo mật</a></li>
+                     <li><a href="#">Chính sách hoàn tiền và hủy bỏ</a></li>
+                     <li><a href="#">Câu hỏi thường gặp</a></li>
+                     <li><a href="#">Điều khoản và điều kiện</a></li>
                  </ul>
              </div>
         </div>
         <div class="footer-socials">
-            <h3>Follow Us</h3>
+            <h3>Theo dõi chúng tôi</h3>
             <div class="social-icons-list">
                 <a href="YOUR_YOUTUBE_LINK" target="_blank" class="social-icon-item" title="YouTube">
                     <img src="images/Youtube.jpg" alt="YouTube">
